Generator.Tests.Abstraction/TestCases/InvalidTypeConversion/Composition2/IInvalidTypeConversionTestCaseService2.cs
namespace Paukertj.Autoconverter.Generator.Tests.Abstraction.TestCases.InvalidTypeConversion.Composition1
{
    public interface IInvalidTypeConversionTestCaseService2
    {
        InvalidTypeConversionToEntity2 ConvertScenario1();

        InvalidTypeConversionFromEntity2 GetSourceScenario1();
    }
}
